--- a/templates/unit-tests/test-results/zen-grid-item-base.css
+++ b/templates/unit-tests/test-results/zen-grid-item-base.css
@@ -11,13 +11,11 @@
   -webkit-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-  overflow: visible;
   word-wrap: break-word;
   /* Test zen-grid-item-base() with $zen-box-sizing: content-box */
   padding-left: 10px;
   padding-right: 10px;
   border: 0 !important;
-  overflow: visible;
   word-wrap: break-word;
   /* Test zen-grid-item-base() with $legacy-support-for-ie7: true */
   padding-left: 10px;
@@ -26,7 +24,6 @@
   -webkit-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-  overflow: visible;
   word-wrap: break-word;
   /* Test zen-grid-item-base() with $box-sizing-polyfill-path: "/boxsizing.htc" and $legacy-support-for-ie7: true */
   padding-left: 10px;
@@ -35,7 +32,6 @@
   -webkit-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-  overflow: visible;
   word-wrap: break-word;
   *behavior: url("/boxsizing.htc");
   /* Test zen-grid-item-base() with $box-sizing-polyfill-path: "/boxsizing.htc" and $legacy-support-for-ie6: true */
@@ -45,7 +41,6 @@
   -webkit-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-  overflow: visible;
   word-wrap: break-word;
   *behavior: url("/boxsizing.htc");
   _display: inline;
@@ -58,7 +53,6 @@
   -webkit-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-  overflow: visible;
   word-wrap: break-word;
   /* Test zen-grid-item-base() with $zen-gutter-width: 15px and $zen-float-direction: right */
   padding-left: 8px;
@@ -67,7 +61,6 @@
   -webkit-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-  overflow: visible;
   word-wrap: break-word;
   /* Test zen-grid-item-base() with $zen-gutter-width: 15px and $zen-reverse-all-floats: true */
   padding-left: 8px;
@@ -76,6 +69,5 @@
   -webkit-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-  overflow: visible;
   word-wrap: break-word;
 }
